--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   flutter_link_previewer: ^2.1.0
   link_previewer_aad: ^1.0.0
   firebase_storage: ^8.1.3
+  flutter_slidable: ^0.6.0
   flutter_test:
     sdk: flutter
 
